Fix visual issue with dashboard texts overlapping
Texts were made 'nowrap'.

--- a/stylesheets/application.sass
+++ b/stylesheets/application.sass
@@ -132,10 +132,18 @@ body
   font-family: $light-font
   font-size: 13px
   line-height: 20px
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+  width: 100%
 
 .player_dashboard-info_artist
   font-size: 13px
   line-height: 20px
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+  width: 100%
 
 .player_dashboard-actions
   +size(70px, 40px)
